--- a/aoc22.cabal
+++ b/aoc22.cabal
@@ -12,6 +12,7 @@ executable aoc22
   main-is: Main.hs
   other-modules:
       Days.Day1
+      Days.Day10
       Days.Day2
       Days.Day3
       Days.Day4
