--- a/aoc22.cabal
+++ b/aoc22.cabal
@@ -14,6 +14,11 @@ executable aoc22
       Days.Day1
       Days.Day10
       Days.Day11
+      Days.Day12
+      Days.Day13
+      Days.Day14
+      Days.Day15
+      Days.Day16
       Days.Day2
       Days.Day3
       Days.Day4
@@ -29,6 +34,7 @@ executable aoc22
   build-depends:
       base
     , containers
+    , heap
     , megaparsec
     , split
   default-language: Haskell2010
