--- a/aoc.cabal
+++ b/aoc.cabal
@@ -13,6 +13,7 @@ executable aoc
   other-modules:
       Shared
       Solutions.All
+      Solutions.Year2015.Day1
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
