--- a/aoc.cabal
+++ b/aoc.cabal
@@ -14,6 +14,7 @@ executable aoc
       Shared
       Solutions.All
       Solutions.Year2015.Day1
+      Solutions.Year2015.Day2
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
