--- a/aoc.cabal
+++ b/aoc.cabal
@@ -15,6 +15,7 @@ executable aoc
       Solutions.All
       Solutions.Year2015.Day1
       Solutions.Year2015.Day2
+      Solutions.Year2015.Day3
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
