--- a/aoc.cabal
+++ b/aoc.cabal
@@ -17,6 +17,7 @@ executable aoc
       Solutions.Year2015.Day2
       Solutions.Year2015.Day3
       Solutions.Year2015.Day4
+      Solutions.Year2015.Day5
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
