--- a/aoc.cabal
+++ b/aoc.cabal
@@ -18,6 +18,7 @@ executable aoc
       Solutions.Year2015.Day3
       Solutions.Year2015.Day4
       Solutions.Year2015.Day5
+      Solutions.Year2015.Day6
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
