--- a/aoc.cabal
+++ b/aoc.cabal
@@ -52,6 +52,7 @@ executable aoc
       Solutions.Year2022.Day8
       Solutions.Year2022.Day9
       Solutions.Year2023.Day1
+      Solutions.Year2023.Day2
       Paths_aoc
   hs-source-dirs:
       src
