--- a/aoc.cabal
+++ b/aoc.cabal
@@ -54,6 +54,7 @@ executable aoc
       Solutions.Year2023.Day1
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
+      Solutions.Year2023.Day4
       Paths_aoc
   hs-source-dirs:
       src
