--- a/aoc.cabal
+++ b/aoc.cabal
@@ -20,6 +20,7 @@ executable aoc
       Solutions.Year2015.Day5
       Solutions.Year2015.Day6
       Solutions.Year2015.Day7
+      Solutions.Year2019.Day1
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
