--- a/aoc.cabal
+++ b/aoc.cabal
@@ -21,6 +21,8 @@ executable aoc
       Solutions.Year2015.Day6
       Solutions.Year2015.Day7
       Solutions.Year2019.Day1
+      Solutions.Year2019.Day2
+      Solutions.Year2019.Intcode
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
       Solutions.Year2021.Day11
