--- a/aoc.cabal
+++ b/aoc.cabal
@@ -58,6 +58,7 @@ executable aoc
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
+      Solutions.Year2023.Day5
       Paths_aoc
   hs-source-dirs:
       src
