--- a/aoc.cabal
+++ b/aoc.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -60,6 +60,8 @@ executable aoc
       Solutions.Year2023.Day4
       Solutions.Year2023.Day5
       Solutions.Year2023.Day6
+      Solutions.Year2023.Day7
+      Solutions.Year2023.Day8
       Paths_aoc
   hs-source-dirs:
       src
