--- a/aoc.cabal
+++ b/aoc.cabal
@@ -22,6 +22,7 @@ executable aoc
       Solutions.Year2015.Day7
       Solutions.Year2019.Day1
       Solutions.Year2019.Day2
+      Solutions.Year2019.Day3
       Solutions.Year2019.Intcode
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
