--- a/aoc.cabal
+++ b/aoc.cabal
@@ -26,6 +26,7 @@ executable aoc
       Solutions.Year2019.Day4
       Solutions.Year2019.Day5
       Solutions.Year2019.Day6
+      Solutions.Year2019.Day7
       Solutions.Year2019.Intcode
       Solutions.Year2021.Day1
       Solutions.Year2021.Day10
