--- a/aoc.cabal
+++ b/aoc.cabal
@@ -60,6 +60,7 @@ executable aoc
       Solutions.Year2022.Day8
       Solutions.Year2022.Day9
       Solutions.Year2023.Day1
+      Solutions.Year2023.Day10
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
