--- a/aoc.cabal
+++ b/aoc.cabal
@@ -62,6 +62,7 @@ executable aoc
       Solutions.Year2023.Day1
       Solutions.Year2023.Day10
       Solutions.Year2023.Day11
+      Solutions.Year2023.Day12
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
