--- a/aoc.cabal
+++ b/aoc.cabal
@@ -63,6 +63,8 @@ executable aoc
       Solutions.Year2023.Day10
       Solutions.Year2023.Day11
       Solutions.Year2023.Day12
+      Solutions.Year2023.Day13
+      Solutions.Year2023.Day14
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
