--- a/aoc.cabal
+++ b/aoc.cabal
@@ -65,6 +65,7 @@ executable aoc
       Solutions.Year2023.Day12
       Solutions.Year2023.Day13
       Solutions.Year2023.Day14
+      Solutions.Year2023.Day15
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
