--- a/aoc.cabal
+++ b/aoc.cabal
@@ -66,6 +66,7 @@ executable aoc
       Solutions.Year2023.Day13
       Solutions.Year2023.Day14
       Solutions.Year2023.Day15
+      Solutions.Year2023.Day16
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
