--- a/aoc.cabal
+++ b/aoc.cabal
@@ -78,7 +78,7 @@ executable aoc
       Paths_aoc
   hs-source-dirs:
       src
-  ghc-options: -O2
+  ghc-options: -O2 -threaded
   build-depends:
       array
     , base
@@ -89,6 +89,7 @@ executable aoc
     , cryptohash-md5
     , heap
     , megaparsec
+    , parallel
     , range
     , split
     , timeit
