--- a/package.yaml
+++ b/package.yaml
@@ -6,7 +6,7 @@ source-dirs: src
 executable:
   main: Main.hs
 
-ghc-options: -O2
+ghc-options: -O2 -threaded
 
 dependencies:
   - array
@@ -18,6 +18,7 @@ dependencies:
   - cryptohash-md5
   - heap
   - megaparsec
+  - parallel
   - range
   - split
   - timeit
