--- a/aoc.cabal
+++ b/aoc.cabal
@@ -67,6 +67,7 @@ executable aoc
       Solutions.Year2023.Day14
       Solutions.Year2023.Day15
       Solutions.Year2023.Day16
+      Solutions.Year2023.Day17
       Solutions.Year2023.Day2
       Solutions.Year2023.Day3
       Solutions.Year2023.Day4
